err/patacrep.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Unidecode-1.0.22.dist-info'...
Listing './lib/python3.5/site-packages/argdispatch'...
Listing './lib/python3.5/site-packages/argdispatch-0.2.0.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/patacrep'...
Listing './lib/python3.5/site-packages/patacrep/content'...
Listing './lib/python3.5/site-packages/patacrep/data'...
Listing './lib/python3.5/site-packages/patacrep/data/img'...
Listing './lib/python3.5/site-packages/patacrep/data/templates'...
Listing './lib/python3.5/site-packages/patacrep/data/templates/songbook'...
Listing './lib/python3.5/site-packages/patacrep/data/templates/songs'...
Listing './lib/python3.5/site-packages/patacrep/data/templates/songs/chordpro'...
Listing './lib/python3.5/site-packages/patacrep/data/templates/songs/chordpro/chordpro'...
Listing './lib/python3.5/site-packages/patacrep/data/templates/songs/chordpro/html'...
Listing './lib/python3.5/site-packages/patacrep/data/templates/songs/chordpro/latex'...
Listing './lib/python3.5/site-packages/patacrep/data/templates/styles'...
Listing './lib/python3.5/site-packages/patacrep/latex'...
Listing './lib/python3.5/site-packages/patacrep/songbook'...
Listing './lib/python3.5/site-packages/patacrep/songs'...
Listing './lib/python3.5/site-packages/patacrep/songs/chordpro'...
Listing './lib/python3.5/site-packages/patacrep/songs/latex'...
Listing './lib/python3.5/site-packages/patacrep/tools'...
Listing './lib/python3.5/site-packages/patacrep/tools/cache'...
Listing './lib/python3.5/site-packages/patacrep/tools/content'...
Listing './lib/python3.5/site-packages/patacrep/tools/convert'...
Listing './lib/python3.5/site-packages/patacrep-5.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
